added api for db file and local file
