# app/Models/File.php
@@ -1,0 +1,18 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class File extends Model
+{
+    use HasFactory;
+    public $timestamps = false;
+    protected $fillable = [
+        'id',
+        'name',
+        'file',
+        'extension',
+    ];
+}
